2008-05-23  Neal H. Walfield  <neal@gnu.org>

	* ager.c (ager_loop): Don't flush shared pages, only unmap them.

2008-05-21  Neal H. Walfield  <neal@gnu.org>

	* object.c (folio_object_alloc): Use the strong variant of TYPE.

2008-05-21  Neal H. Walfield  <neal@gnu.org>

	* ager.c (ager_loop): To see if we are at the start of a period,
	check if ITERATIONS is a multiple of FREQ, not if it is zero.  Set
	each activity's statistic's period field.  Always increment
	iterations.
	(ager_loop): 

2008-02-21  Neal H. Walfield  <neal@gnu.org>

	* Makefile.am (COMMON_CPPFLAGS): Remove variable.
	(viengoos_CPPFLAGS): Set to $(KERNEL_CPPFLAGS).
	(viengoos_CFLAGS): New variable.
	(libhurd_cap_a_CPPFLAGS): Set to $(USER_CPPFLAGS).
	(libhurd_cap_a_CFLAGS): New variable.
	(t_as_CFLAGS): New variable.
	(t_activity_CFLAGS): Likewise.
	(t_link_CFLAGS): Likewise.

2008-02-20  Neal H. Walfield  <neal@gnu.org>

	* server.c (server_loop): Implement object_discarded_clear method.
	* rm.h (rm_method_id_string): Handle RM_object_discarded_clear
	case.

2008-02-20  Neal H. Walfield  <neal@gnu.org>

	* server.c (server_loop): On a page fault, use cap_to_object_soft
	to find the page.

2008-02-20  Neal H. Walfield  <neal@gnu.org>

	* cap.h (cap_to_object): New declaration.
	(cap_to_object_soft): Likewise.
	* cap.c (cap_to_object_internal): New function.
	(cap_to_object): Implement in terms of it.
	(cap_to_object_soft): New function.

2008-02-20  Neal H. Walfield  <neal@gnu.org>

	* activity.h (struct activity): Unify the inactive_dirty and
	inactive_clean lists.  Update users.

2008-02-20  Neal H. Walfield  <neal@gnu.org>

	* activity.c (activity_destroy): Move objects from VICTIM's
	priority tree to its VICTIM->PARENT's priority tree, not its
	inactive lists.

2008-02-20  Neal H. Walfield  <neal@gnu.org>

	* object.c (FOLIOS_CORE): Increase value.

2008-02-20  Neal H. Walfield  <neal@gnu.org>

	* list.h (struct list) [! NDEBUG]: Add field name.